# react-native-bbs-signatures

./: .gitignore  .npmignore  :w  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-bbs-signatures.podspec  react-native-tscodegen.json  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/workflows/: release.yml
android/: CMakeCache.txt  CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativebbssignatures/: BbsSignaturesModule.java  BbsSignaturesModule.kt  BbsSignaturesPackage.java  BbsSignaturesPackage.kt  NativeProxy.java
cpp/: HostObject.cpp  HostObject.h  Logging.h  TurboModuleUtils.cpp  TurboModuleUtils.h  TurboUtilsModule.cpp  TurboUtilsModule.h  TypedArray.cpp  TypedArray.h  bbs-signatures.cpp  bbs-signatures.h  bbs.h  bbsSignatures.cpp  bbsSignatures.h  nativeBbsSignatures.cpp  nativeBbsSignatures.h  react-native-bbs-signatures.cpp  react-native-bbs-signatures.h  turboModuleUtility.cpp  turboModuleUtility.h
cpp/include/: jsi-inl.h
cpp/keys/: bbs-key.h  bbsKey.h  blinded-bls-key-pair.cpp  blinded-bls-key-pair.h  blindedBlsKeyPair.cpp  blindedBlsKeyPair.h  bls-key-pair.cpp  bls-key-pair.h  blsKeyPair.cpp  blsKeyPair.h  util.cpp  util.h
cpp/tests/: CMakeLists.txt  Makefile  README.md  test
cpp/tests/lib/: bbs.dylib
cpp/tests/src/: bbsTest.cpp  bbs_test.cpp
example/: app.json  metro.config.js  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativebbssignatures/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativebbssignatures/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/BbsSignaturesExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/BbsSignaturesExample.xcodeproj/: project.pbxproj
example/ios/BbsSignaturesExample.xcodeproj/xcshareddata/xcschemes/: BbsSignaturesExample.xcscheme
example/ios/BbsSignaturesExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: BbsSignatures.h  BbsSignatures.mm
ios/BbsSignatures.xcodeproj/: project.pbxproj
ios/Frameworks/BbsSignatures.xcframework/: Info.plist
lib/cpp-generated/: NativeModules.cpp  NativeModules.h
src/: bbs.ts  bbsSignature.ts  bls12381.ts  bls12381toBbs.ts  index.ts  index.tsx  register.ts  turboModule.ts
src/types/: BbsBlindSignContext.ts  BbsBlindSignContextRequest.ts  BbsBlindSignRequest.ts  BbsCreateProofRequest.ts  BbsKeyPair.ts  BbsSignRequest.ts  BbsVerifyBlindSignContextRequest.ts  BbsVerifyProofRequest.ts  BbsVerifyRequest.ts  BbsVerifyResult.ts  Bls12381ToBbsRequest.ts  BlsBbsSignRequest.ts  BlsBbsVerifyRequest.ts  BlsKeyPair.ts  index.ts
